table recommendation algorithm